implementacion de estadisticas y logo

--- a/GoalGridApp/Components/Layout/NavMenu.razor
+++ b/GoalGridApp/Components/Layout/NavMenu.razor
@@ -1,6 +1,9 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">GoalGridApp</a>
+        <a class="navbar-brand" href="">
+            <img src="images/logo.png" alt="Logo GoalGridApp" height="30" class="align-middle me-2" />
+            <span class="align-middle">GoalGridApp</span>
+        </a>
     </div>
 </div>
 
@@ -14,24 +17,17 @@
             </NavLink>
         </div>
 
-        @* Nuevo enlace para el Planificador Semanal *@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weeklyplanner">
-                <span class="bi bi-calendar-week-fill" aria-hidden="true"></span> Planificador Semanal
+                <span class="bi bi-calendar-week-fill-nav-menu" aria-hidden="true"></span> Planificador Semanal
             </NavLink>
         </div>
 
-        @* Puedes descomentar estos si quieres mantenerlos, o eliminarlos *@
-        @* <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="stats">
+                <span class="bi bi-bar-chart-line-fill-nav-menu" aria-hidden="true"></span> Estadísticas
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div> *@
 
     </nav>
 </div>
