--- a/GoalGridApp/_Imports.razor
+++ b/GoalGridApp/_Imports.razor
@@ -5,5 +5,9 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using GoalGridApp 
+@using GoalGridApp
 @using GoalGridApp.Components
+@using Radzen
+@using Radzen.Blazor
+@using GoalGridApp.Data
+@using GoalGridApp.Services
